# AgenteEvoApi

./: .gitignore  main.py  pyproject.toml
src/: app.py  enviar_whatsapp.py  message_sandeco.py  receber_whatsapp.py  send_sandeco.py  teste_envio.py  teste_webhook.py
src/agents/: agente_verificador.py
src/core/: message_sandeco.py
src/receber/: evo_receber.py  receber_agente.py  receber_whatsapp.py
src/streamlit/: app.py  enviar_whatsapp.py
src/telegram/: agent_telegram.py
src/testes/: test_agent_local.py  test_agent_telegram.py  test_openssl.py
