[project]
name = "agenteevoapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evolutionapi>=0.1.2",
    "flash>=1.0.3",
    "flask>=3.1.3",
    "google-genai>=1.66.0",
    "langchain>=0.2.5",
    "langchain-google-genai",
    "langchain-core",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
]
